--- a/style.css
+++ b/style.css
@@ -14,3 +14,19 @@ h1 {
 .playing {
 	font-weight: bold;
 }
+
+button {
+	cursor: pointer;
+	border: 4px solid #004080;
+	border-radius: 8px;
+	background-color: #ee2;
+	padding: 10px;
+	font-weight: bold;
+	border: 4px solid #004080;
+	box-shadow: 10px 15px 24px 0px rgba(0, 0, 0, 0.4);
+}
+
+#stop-button {
+	position: absolute;
+	top: 100px;
+}
