--- a/style.css
+++ b/style.css
@@ -42,3 +42,10 @@ button {
 	border-radius: 4px;
 	font-size: 22px;
 }
+
+.mesure-num {
+	font-size: 14px;
+	text-align: right;
+	padding-right: 18px;
+	vertical-align: top;
+}
