--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button {
 	background-color: #dfd;
 	padding: 8px;
 	height: 22px;
-	width: 300px;
+	width: 320px;
 	border-radius: 4px;
 	font-size: 22px;
 }
@@ -48,4 +48,6 @@ button {
 	text-align: right;
 	padding-right: 18px;
 	vertical-align: top;
+	width: 20px;
+	display: inline-block;
 }
