--- a/style-3.css
+++ b/style-3.css
@@ -1,5 +1,7 @@
 #recorder {
-	margin: 22px;
+	margin-top: 22px;
+	margin-bottom: 22px;
+	margin-left: 8px;
 	padding: 18px;
 	background: #dff;
 	border-radius: 8px;
