--- a/style-3.css
+++ b/style-3.css
@@ -34,3 +34,35 @@
 #instructions div {
 	margin-top: 4px;
 }
+
+#prerecorded-clips-container {
+	margin: 8px;
+	background-color: #dfd;
+	padding: 8px;
+	border: 2px solid #004080;
+	border-radius: 8px;
+	width: 420px;
+}
+
+#prerecorded-clips {
+	margin-top: 8px;
+}
+
+#prerecorded-clips span {
+	margin-left: 8px;
+	margin-top: 8px;
+	padding: 4px;
+	cursor: pointer;
+	font-weight: bold;
+	border-radius: 8px;
+}
+
+#prerecorded-clips span:hover {
+	background-color: #999;
+}
+
+.clip-name {
+	font-weight: bold;
+	margin-bottom: 6px;
+	margin-left: 16px;
+}
