--- a/style-4.css
+++ b/style-4.css
@@ -2,6 +2,13 @@
 	margin-top: 22px;
 }
 
+#mesure-tables caption {
+	text-align: left;
+	font-weight: bold;
+	margin-bottom: 4px;
+	margin-left: 14px;
+}
+
 #mesure-tables table td {
 	border-radius: 4px;
 	text-align: center;
@@ -42,8 +49,14 @@
 #tempo-slider-container {
 	margin-top: 12px;
 	font-weight: bold;
+	display: inline;
+	margin-left: 18px;
 }
 
 #tempo-slider {
 	width: 200px;
+}
+
+button {
+	min-width: 80px;
 }
