--- a/style-4.css
+++ b/style-4.css
@@ -13,6 +13,7 @@
 	border-radius: 8px;
 	text-align: center;
 	color: #222;
+	min-width: 22px;
 }
 
 #mesure-tables table td.current {
@@ -59,6 +60,10 @@
 
 #mesure-tables table .note.selecting {
 	background-color: #8e8;
+}
+
+#add-remove-beat img {
+	cursor: pointer;
 }
 
 #tempo-slider-container {
